--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </div>
-        <div class="bg-light p-5 rounded">
+        <div class="bg-light p-5">
             <div class="text-center"><h4>Endorsed & Supported By</h4></div>
             <div class="row wow bounceInLeft" data-wow-duration="1s" data-wow-delay=".5s">
                 <div class="col-md-12">
@@ -110,11 +110,11 @@
         </div> -->
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12">
+                <div class="col-6">
                     <img src="https://www.coevento.today/static/media/coevento-logo.b04e87aa.png" width="160"
                         alt="logo" />
                 </div>
-                <div class="col-lg-6 col-md-6 col-sm-12 d-flex justify-content-end gap-4 align-items-center">
+                <div class="col-6 d-flex justify-content-end gap-4 align-items-center">
                     <i class="fa fa-facebook fs-5"></i>
                     <i class="fa fa-twitter fs-5"></i>
                     <i class="fa fa-linkedin fs-5   "></i>
